# lazycsv2

./: CMakeLists.txt  README.md
include/: lazycsv.hpp
test/: CMakeLists.txt  main.cpp
